[package]
name = "rust_apps"
version = "0.1.0"
authors = ["Антон Владимиров <vladimirov.anton@pressindex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
